# rustTraining

./: README.md
FirstProject/src/: main  main.rs
GuessingGame/src/: main.rs
PlayingAround/: Cargo.toml
PlayingAround/src/: main.rs
VariousTests/src/: main.rs
auction_schipol/: Cargo.toml
auction_schipol/auction_json/: combined_output.json  first_page_Auction.json  output.csv  second_page_Auction.json  third_page_Auction.json
auction_schipol/src/: main.rs
testCouponAPI/: Cargo.toml
