[package]
name = "PlayingAround"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5"
thiserror = "1.0"
lazy_static = "1.4"
csv = "1.1"
parking_lot = "0.12"
tokio = {version = "1.35.1", features = ["full"]}
futures = "0.3.29"
axum = "0.7.7"
